<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fragment_buttons_dejavu_text" translatable="false">Deja Vu</string>
    <string name="fragment_buttons_jojo_text" translatable="false">Jojo</string>
    <string name="fragment_buttons_meme_credit_text" translatable="false">Meme Credit</string>
    <string name="fragment_buttons_message_steam_text" translatable="false">Message Steam</string>
    <string name="fragment_buttons_mgs_warning_text" translatable="false">MGS Warning</string>
    <string name="fragment_buttons_nani_text" translatable="false">Nani</string>
    <string name="fragment_buttons_nyaa_text" translatable="false">Nyaa</string>
    <string name="fragment_buttons_roblox_text" translatable="false">Roblox</string>
    <string name="fragment_buttons_tuturu_text" translatable="false">Tuturu</string>
    <string name="fragment_buttons_yeah_text" translatable="false">Yeah</string>
</resources>
